# mode

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
benchmarking/: bench-requirements.txt  data.py  evaluate.py  metric_to_json.py  mode.py  traditional_rag.py
benchmarking/eval/logs/: all_metrics_ours.json  all_metrics_traditional_rag.json
benchmarking/eval/logs/ours/: D-hotpotqa_C-100_Q-100_M-1.txt  D-hotpotqa_C-100_Q-100_M-2.txt  D-hotpotqa_C-200_Q-100_M-1.txt  D-hotpotqa_C-200_Q-100_M-2.txt  D-hotpotqa_C-500_Q-100_M-1.txt  D-hotpotqa_C-500_Q-100_M-2.txt  D-squad_C-100_Q-100_M-1.txt  D-squad_C-100_Q-100_M-2.txt  D-squad_C-200_Q-100_M-1.txt  D-squad_C-200_Q-100_M-2.txt  D-squad_C-500_Q-100_M-1.txt  D-squad_C-500_Q-100_M-2.txt
benchmarking/eval/logs/traditional_rag/: evaluation_D-hotpotqa_C-100_Q-100.txt  evaluation_D-hotpotqa_C-200_Q-100.txt  evaluation_D-hotpotqa_C-500_Q-100.txt  evaluation_D-squad_C-100_Q-100.txt  evaluation_D-squad_C-200_Q-100.txt  evaluation_D-squad_C-500_Q-100.txt
docs/: docs.md
docs/readthedocs/: conf.py  index.rst
src/mode_rag/: __init__.py
src/mode_rag/inference/: __init__.py  find_cluster.py  main.py  model.py  search.py  types.py
src/mode_rag/ingestion/: __init__.py  centroid.py  cluster.py  main.py
src/mode_rag/utils/: __init__.py  chunker.py  data.py  embedding.py
test/: inference_test.py  ingestion_test.py  test.py
